language/move-prover/tests/sources/functional/aborts_if.exp
Move prover returns: exiting with boogie verification errors
error: function does not abort under this condition

    ┌── tests/sources/functional/aborts_if.move:35:9 ───
    │
 35 │         aborts_if _x <= _y;
    │         ^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts_if.move:32:5: abort2_incorrect
    =         _x = <redacted>,
    =         _y = <redacted>

error: function does not abort under this condition

    ┌── tests/sources/functional/aborts_if.move:52:9 ───
    │
 52 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts_if.move:47:5: abort4_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/functional/aborts_if.move:48:9: abort4_incorrect

error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/aborts_if.move:56:5 ───
    │
 56 │ ╭     fun abort5_incorrect(x: u64, y: u64) {
 57 │ │         if (x <= y) abort 1
 58 │ │     }
    │ ╰─────^
    ·
 57 │         if (x <= y) abort 1
    │         ------------------- abort happened here with code `0x1`
    │
    =     at tests/sources/functional/aborts_if.move:56:5: abort5_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/functional/aborts_if.move:57:9: abort5_incorrect (ABORTED)

error: function does not abort under this condition

    ┌── tests/sources/functional/aborts_if.move:68:9 ───
    │
 68 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts_if.move:64:5: abort6_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/functional/aborts_if.move:65:9: abort6_incorrect

error: function does not abort under this condition

     ┌── tests/sources/functional/aborts_if.move:151:9 ───
     │
 151 │         aborts_if x == 4;
     │         ^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/aborts_if.move:145:5: abort_at_2_or_3_spec_incorrect
     =         x = <redacted>,
     =         tmp#$1 = <redacted>
     =     at tests/sources/functional/aborts_if.move:146:31: abort_at_2_or_3_spec_incorrect

error: abort not covered by any of the `aborts_if` clauses

     ┌── tests/sources/functional/aborts_if.move:154:5 ───
     │
 154 │ ╭     fun abort_at_2_or_3_strict_incorrect(x: u64) {
 155 │ │         if (x == 2 || x == 3) abort 1;
 156 │ │     }
     │ ╰─────^
     ·
 155 │         if (x == 2 || x == 3) abort 1;
     │                               ------- abort happened here with code `0x1`
     │
     =     at tests/sources/functional/aborts_if.move:154:5: abort_at_2_or_3_strict_incorrect
     =         x = <redacted>,
     =         tmp#$1 = <redacted>
     =     at tests/sources/functional/aborts_if.move:155:31: abort_at_2_or_3_strict_incorrect (ABORTED)

error: abort not covered by any of the `aborts_if` clauses

     ┌── tests/sources/functional/aborts_if.move:136:5 ───
     │
 136 │ ╭     fun abort_at_2_or_3_total_incorrect(x: u64) {
 137 │ │         if (x == 2 || x == 3) abort 1;
 138 │ │     }
     │ ╰─────^
     ·
 137 │         if (x == 2 || x == 3) abort 1;
     │                               ------- abort happened here with code `0x1`
     │
     =     at tests/sources/functional/aborts_if.move:136:5: abort_at_2_or_3_total_incorrect
     =         x = <redacted>,
     =         tmp#$1 = <redacted>
     =     at tests/sources/functional/aborts_if.move:137:31: abort_at_2_or_3_total_incorrect (ABORTED)

error: function does not abort under this condition

    ┌── tests/sources/functional/aborts_if.move:91:9 ───
    │
 91 │         aborts_if x == y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts_if.move:86:5: multi_abort2_incorrect
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/functional/aborts_if.move:87:9: multi_abort2_incorrect

error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/aborts_if.move:95:5 ───
    │
 95 │ ╭     fun multi_abort3_incorrect(_x: u64, _y: u64) {
 96 │ │         abort 1
 97 │ │     }
    │ ╰─────^
    ·
 96 │         abort 1
    │         ------- abort happened here with code `0x1`
    │
    =     at tests/sources/functional/aborts_if.move:95:5: multi_abort3_incorrect
    =         _x = <redacted>,
    =         _y = <redacted>
    =     at tests/sources/functional/aborts_if.move:96:9: multi_abort3_incorrect (ABORTED)

error: function does not abort under this condition

     ┌── tests/sources/functional/aborts_if.move:119:9 ───
     │
 119 │         aborts_if true;
     │         ^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/aborts_if.move:113:5: multi_abort5_incorrect
     =         x = <redacted>
     =     at tests/sources/functional/aborts_if.move:116:10: multi_abort5_incorrect
     =     at tests/sources/functional/aborts_if.move:114:9: multi_abort5_incorrect

error: function does not succeed under this condition

     ┌── tests/sources/functional/aborts_if.move:177:9 ───
     │
 177 │         succeeds_if x == 2;
     │         ^^^^^^^^^^^^^^^^^^^
     ·
 174 │         if (x == 2 || x == 3) abort 1;
     │                               ------- abort happened here with code `0x1`
     │
     =     at tests/sources/functional/aborts_if.move:173:5: succeed_incorrect
     =         x = <redacted>,
     =         tmp#$1 = <redacted>
     =     at tests/sources/functional/aborts_if.move:174:31: succeed_incorrect (ABORTED)
